--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@prokopschield/don",
 	"description": "dumb object notation",
-	"version": "0.1.0-1",
+	"version": "0.1.0",
 	"main": "lib/index.js",
 	"bin": {
 		"don": "lib/cli.js"
